# instrumental-agent-clib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Doxyfile
include/: instrumental_agent.h  instrumental_agent.hpp  instrumental_agent_implementation.hpp
src/: agent.c  agent.h  agent_curl.c
tests/: cli_tool.cc
